# SpruceID-TakeHomeAssignment

./: Cargo.toml  Makefile  README.md
src/: types.rs
